[package]
name = "ymir"
version = "0.1.0"
edition = "2021"
authors = ["ponurakk <p0unrakg@int.pl>"]
description = "Projects cleaner"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ponurakk/ymir"
homepage = "https://github.com/ponurakk/ymir"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
config = { version = "0.15.7", features = ["toml"], default-features = false }
dirs = "6.0.0"
git2 = "0.20.0"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
tokei = "12.1.2"
walkdir = "2.5.0"
